# haskell-chess

./: Bishop.hs  Display.hs  King.hs  Knight.hs  Pawn.hs  Queen.hs  README.md  Rook.hs  board.hs  chess.cabal
CheckMate/: Check.hs
PieceRules/: Bishop.hs  King.hs  Knight.hs  Pawn.hs  Queen.hs  Rook.hs
